--- a/hackathon/MK/swcRename/renameSWC.ui
+++ b/hackathon/MK/swcRename/renameSWC.ui
@@ -22,7 +22,7 @@
    <string/>
   </property>
   <property name="whatsThis">
-   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;For [&lt;/span&gt;&lt;span style=&quot; font-size:9pt; font-weight:600;&quot;&gt;non-processed&lt;/span&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;] SWC files, simply change the file names to Allen's formal name patterns based on the information indicated by the old names.&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;span style=&quot; font-size:9pt;&quot;&gt;Note, no new files will be generated.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <string/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <item>
@@ -139,7 +139,7 @@
               </font>
              </property>
              <property name="whatsThis">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Create a new folder named &amp;quot;newFilesWithFormalizedNames&amp;quot; in which all swc, apo, ano files with formalized filenames are stored.&lt;br/&gt;&lt;br/&gt;When [Create apo and ano] button is not checked, apo and ano files won't be generated. The default is set to be checked.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string/>
              </property>
              <property name="title">
               <string>Formalize WMU filename:</string>
@@ -314,7 +314,7 @@
               </font>
              </property>
              <property name="whatsThis">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;Similar to the above, this will create a &amp;quot;newFilesWithFormalizedNames&amp;quot; folder where all files with formalized names are stored. When mapping table is provided, the names in the mapping table will be used. Otherwise, file names will be given with soma information from swc files.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string/>
              </property>
              <property name="title">
               <string>Formalize SEU files:</string>
@@ -408,7 +408,7 @@
                  </font>
                 </property>
                 <property name="title">
-                 <string>Select the name mappinbg table file (.csv):</string>
+                 <string>[Optional] Rename files from mappinbg table file (.csv):</string>
                 </property>
                 <layout class="QHBoxLayout" name="horizontalLayout_11">
                  <item>
